@@ -754,3 +754,4 @@ seen. gmtime warning still there
 - Made /restart call mod_unload for all modules
 - Fixed a typo in the win32 makefile
 - Rewrote Addit, hopefully it fixes the SJOIN problems?
+- Fixed fence post marker overwrite in /vhost, found and fixed by tgf
